static/index.css
#content, html, body {
	height: 98%;
}
#left {
	float: left;
	width: 50%;
	height: 95%;
}
#right {
	float: left;
	width: 50%;
	height: 100%;
	overflow-y: scroll;
}
#logo {
	display: block;
	margin-left: auto;
	margin-right: auto;
	width: 50%;
}
#replinput, #reploutput {
	font-family: monospace;
}

